--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,18 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  username: amorittabox
 
 development:
   <<: *default
-  database: db/amoritta-dev.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+  database: amorittabox_development
+  password: <%= ENV['AMORITTABOX_DEVELOPMENT_DATABASE_PASSWORD'] %>
 test:
   <<: *default
-  database: db/amoritta-test.sqlite3
-
+  database: amorittabox_test
+  password: <%= ENV['AMORITTABOX_TEST_DATABASE_PASSWORD'] %>
 production:
   <<: *default
-  database: db/amoritta-production.sqlite3
+  database: amorittabox_production
+  password: <%= ENV['AMORITTABOX_PRODUCTION_DATABASE_PASSWORD'] %>
